# mini-django-app

./: .env.test  .gitignore  Dockerfile  Dockerfile-test  Makefile  async_debug.py  docker-compose-test.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/api/: __init__.py  init.py  main.py  renderers.py  router.py
app/api/svc/: router.py  router_billing.py  router_game.py
app/api/v1/: me.py  router.py  schemas.py
app/api/v1/billing/: router.py
app/api/v1/game/: router.py  router_accounts.py  router_slots.py  schemas.py  slots_router.py
app/api/v1/user/: router.py  schemas.py
app/core/: asgi.py  envs.py  error.py  exceptions.py  executors.py  renderers.py  sentry.py  settings.py  urls.py  wsgi.py
app/core/apps/core/: apps.py  models.py  schemas.py
app/core/apps/core/migrations/: 0001_initial.py  0002_payment_created_at_alter_customer_first_name_and_more.py  0003_alter_payment_amount.py
app/core/apps/games/: apps.py  models.py  schemas.py
app/core/apps/games/migrations/: 0001_initial.py  0002_alter_account_auth_token_alter_account_first_name_and_more.py  0002_alter_slot_account.py  0002_remove_slot_hash_name_remove_slot_user_id_slot_game_and_more.py  0003_account_user_agent_alter_account_auth_token.py  0003_alter_account_info_alter_slot_account_and_more.py  0003_alter_slot_account_alter_slot_customer_and_more.py  0004_alter_account_customer_alter_account_game.py  0004_remove_slot_expire_time_slot_expired_at.py  0004_session.py  0005_alter_slot_account.py  0005_slot_is_payed.py  0006_alter_slot_expired_at.py  0007_account_auth_token.py
app/core/apps/stats/: apps.py  models.py  schemas.py
app/core/apps/stats/dicts/: hamster.py
app/core/apps/stats/migrations/: 0001_initial.py  0002_alter_network_account_alter_play_account.py  0002_alter_play_unique_together_play_balance_play_cards_and_more.py  0002_remove_play_balance_remove_play_cards_and_more.py  0003_network.py  0003_play_pphd_alter_network_account_alter_play_account_and_more.py  0004_alter_network_success_percent.py
app/core/apps/users/: apps.py  models.py  schemas.py
app/core/apps/users/migrations/: 0001_initial.py  0004_customer_has_trial.py  (+5 more)
app/core/clients/: redis_.py  tma_hamster.py  ton_api.py  ton_blockchain.py
app/core/common/: auth_dep.py  auth_request.py  db_date.py  enums.py  error.py  executors.py  fake_ua.py  gen_random_string.py  initdata.py  model_enum.py  sentry.py  singleton.py  tg_auth.py  threaded_transaction.py
app/core/common/ninjas_fix/: auth_dep.py  exceptions.py  renderers.py  router.py  shutdown_event.py
app/core/dj_apps/core/: apps.py  models.py
app/core/dj_apps/users/: apps.py  models.py
app/core/libs/: httpx_.py  redis_.py  shutdown_container.py
app/core/models/: tg_user_data.py  user_data.py
app/core/repositories/: tg_auth.py  user.py  web_auth.py
app/core/services/: accounts.py  auth.py  billing.py  network_stats.py  slots.py  tg_auth.py  web_auth.py
app/core/services/auth/: web_auth.py
app/core/services/slots/: slots.py
app/core/services/tokens/: hamster.py
app/hamster/: client.py  main.py
app/hamster/schemas/: clicker_user.py  tasks.py  upgrades_for_buy.py
app/logic/: tg_auth_validation.py
app/tap_robotics/hamster_kombat/: __main__.py  checkout_session.py  client.py  executor.py  main.py  schemas.py
app/tap_robotics/hamster_kombat/common/: queue.py  wrapper.py
app/tap_robotics/hamster_kombat/dicts/: clicker_tasks.py  clicker_upgrade.py  clicker_user.py
app/tap_robotics/hamster_kombat/isolated/: get_most_profitable_upgrade.py  get_taps.py
app/tap_robotics/hamster_kombat/stats/: play.py
app/tap_robotics/hamster_kombat/tasks/: buy_upgrades.py  execute_tasks.py  finish.py  sync.py  tap_hamster.py
app/tg_bot/: main.py
app/tg_bot/handlers/: auth_code.py  start.py
app/tg_bot/utils/: cycler.py
app/users/: apps.py  models.py
core/: renderers.py  settings.py
core/api/: __init__.py
core/api/v1/: __init__.py  me.py
hamster/: __main__.py  client.py
hamster/schemas/: clicker_user.py  upgrades_for_buy.py
tests/: conftest.py
tests/api/v1/user/: test_me.py
tests/data/: auth.py
(+1 files in other folders)
